--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<h1>Joyeux Noel ! </h1>
+<html>
+    <link rel="stylesheet" href="style.css">
+
+<style>
+    body{
+        text-align: center;
+    }
+    img{
+        max-width: 500px;
+    }
+    #index{
+        background-color: white;
+
+    }
+</style>
+    <body>
+        <style>
+            img{
+                width: auto;
+                height: auto;
+            }
+            </style>
+<div id="index">
+    <img src="./image/noel.png">
+    <p>Bienvenue sur un petit quizz pour tester tes connaissances tennistiques</p>
+    <a href="1.html">
+    <p>Let's GO ! </p>
+</a>
+</div>
+
+</body>
+</html>
