--- a/1.html
+++ b/1.html
@@ -7,9 +7,9 @@
 
             <h1>Question numéro 1</h1>
             <p>En quelle année le tennis a-t-il été créé ? (A 10 années près)</p>
-            <label for="answer">Choisi une réponse : </label>
+            <label for="answer">Choisis une réponse : </label>
             <form>
-                <select name="answer" id="answer">
+                <select class="classic" name="answer" id="answer">
                     <option value="false">----------</option>
                     <option value="false">1810-1830</option>
                     <option value="false">1830-1850</option>
@@ -28,7 +28,7 @@
             </div>
             <div id="bad">
                 
-                <p>Pas de chance, mauvaise date :-(</p>
+                <p>Pas de chance, mauvaise date &#128546;</p>
             </div>
         </div>
     </body>
