--- a/3.html
+++ b/3.html
@@ -7,9 +7,9 @@
 
             <h1>Question numéro 3</h1>
             <p>En quelle année Federer a-t-il gagné son premier grand chelem ?            </p>
-            <label for="answer">Choisi une réponse : </label>
+            <label for="answer">Choisis une réponse : </label>
             <form>
-                <select name="answer" id="answer">
+                <select class="classic"name="answer" id="answer">
                     <option value="false">----------</option>
                     <option value="false">2003 US open</option>
                     <option value="true">2003 Wimbeldon</option>
@@ -29,7 +29,7 @@
             </div>
             <div id="bad">
                 
-                <p>Pas de chance, mauvaise réponse :-(</p>
+                <p>Pas de chance, mauvaise réponse &#128546;</p>
             </div>
         </div>
     </body>
