--- a/4.html
+++ b/4.html
@@ -7,9 +7,9 @@
 
             <h1>Question numéro 4</h1>
             <p>Combien de temps à durer le match le plus long de tennis ?</p>
-            <label for="answer">Choisi une réponse : </label>
+            <label for="answer">Choisis une réponse : </label>
             <form>
-                <select name="answer" id="answer">
+                <select class="classic"name="answer" id="answer">
                     <option value="false">----------</option>
                     <option value="false">9 h 5 min</option>
                     <option value="false">10 h 5 min</option>
@@ -28,7 +28,7 @@
             </div>
             <div id="bad">
                 
-                <p>Pas de chance, mauvaise réponse :-(</p>
+                <p>Pas de chance, mauvaise réponse &#128546;</p>
             </div>
         </div>
     </body>
