--- a/5.html
+++ b/5.html
@@ -7,9 +7,9 @@
 
             <h1>Question numéro 5</h1>
             <p>En quelle année a été joué le premier grand chelem à Roland Garos ?</p>
-            <label for="answer">Choisi une réponse : </label>
+            <label for="answer">Choisis une réponse : </label>
             <form>
-                <select name="answer" id="answer">
+                <select class="classic"name="answer" id="answer">
                     <option value="false">----------</option>
                     <option value="false">1907</option>
                     <option value="true">1925</option>
@@ -27,7 +27,7 @@
             </div>
             <div id="bad">
                 
-                <p>Pas de chance, mauvaise réponse :-(</p>
+                <p>Pas de chance, mauvaise réponse &#128546;</p>
             </div>
         </div>
     </body>
