--- a/2.html
+++ b/2.html
@@ -7,9 +7,9 @@
 
             <h1>Question numéro 2</h1>
             <p>Quelle était la couleur originale des balles de tennis ?</p>
-            <label for="answer">Choisi une réponse : </label>
+            <label for="answer">Choisis une réponse : </label>
             <form>
-                <select name="answer" id="answer">
+                <select class="classic"name="answer" id="answer">
                     <option value="false">----------</option>
                     <option value="false">rouge</option>
                     <option value="false">jaune</option>
@@ -28,7 +28,7 @@
             </div>
             <div id="bad">
                 
-                <p>Pas de chance, mauvaise réponse :-(</p>
+                <p>Pas de chance, mauvaise réponse &#128546;</p>
             </div>
         </div>
     </body>
