--- a/6.html
+++ b/6.html
@@ -7,9 +7,9 @@
 
             <h1>Question numéro 6</h1>
             <p>Quel a été le meilleure classement de Goffin ?</p>
-            <label for="answer">Choisi une réponse : </label>
+            <label for="answer">Choisis une réponse : </label>
             <form>
-                <select name="answer" id="answer">
+                <select class="classic"name="answer" id="answer">
                     <option value="false">----------</option>
                     <option value="true">7</option>
                     <option value="false">8</option>
@@ -28,7 +28,7 @@
             </div>
             <div id="bad">
                 
-                <p>Pas de chance, mauvaise réponse :-(</p>
+                <p>Pas de chance, mauvaise réponse &#128546;</p>
             </div>
         </div>
     </body>
