--- a/7.html
+++ b/7.html
@@ -8,9 +8,9 @@
             <h1>Question numéro 7</h1>
             <p>En quelle année Roger Federer a-t-il gagné Roland Garros pour la première fois ?
             </p>
-            <label for="answer">Choisi une réponse : </label>
+            <label for="answer">Choisis une réponse : </label>
             <form>
-                <select name="answer" id="answer">
+                <select class="classic"name="answer" id="answer">
                     <option value="false">----------</option>
                     <option value="true">2009</option>
                     <option value="false">2010</option>
@@ -30,7 +30,7 @@
             </div>
             <div id="bad">
                 
-                <p>Pas de chance, mauvaise réponse :-(</p>
+                <p>Pas de chance, mauvaise réponse &#128546;</p>
             </div>
         </div>
     </body>
