--- a/8.html
+++ b/8.html
@@ -10,7 +10,7 @@
             </p>
             <label for="answer">Choisi une réponse : </label>
             <form>
-                <select name="answer" id="answer">
+                <select class="classic"name="answer" id="answer">
                     <option value="false">----------</option>
                     <option value="true">Oui</option>
                     <option value="false">Non</option>
@@ -27,7 +27,7 @@
             </div>
             <div id="bad">
                 
-                <p>Ca se comprend &#128517;</p>
+                <p>Ça se comprend &#128517;</p>
                 <a href="9.html">Question suivante</a>
             </div>
         </div>
