--- a/9.html
+++ b/9.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="style.css">
         <style>
             img{
-                min-width: 800px;
+                min-width: 1900px;
             }
         </style>
     </head>
@@ -17,9 +17,9 @@
             <a href="image/stade.jpeg">photo</a>
 
             </p>
-            <label for="answer">Choisi une réponse : </label>
+            <label for="answer">Choisis une réponse : </label>
             <form>
-                <select name="answer" id="answer">
+                <select class="classic"name="answer" id="answer">
                     <option value="false">----------</option>
                     <option value="true">Oui</option>
                     <option value="false">Non</option>
@@ -28,7 +28,7 @@
             </form>
             
             <div id="good">
-                <p>Que dirais-tu de passer une journée a Roland-Garros pour aller voir qques matches ? &#128523;
+                <p>Que dirais-tu de passer une journée à Roland-Garros pour aller voir qques matches ? &#128523;
                 </p>
                 <img src="./image/rol.jpeg">
 
